--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,23 @@ version: '3.8'
 
 services:
   backend:
-    build: ./backend_rds
-    container_name: backend
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - ./backend_rds:/app
-    ports:
-      - "8000:8000"
-    environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_NAME=your_db
-      - DB_USER=your_user
-      - DB_PASSWORD=your_password
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - CORS_ALLOWED_ORIGINS=http://localhost:8000,http://127.0.0.1:8000
-    depends_on:
-      - postgres
-      - redis
+  build:
+    context: ./backend_rds
+  container_name: backend
+  restart: always
+  environment:
+    DB_NAME: test_db
+    DB_USER: test_user
+    DB_PASSWORD: test_password
+    DB_HOST: postgres
+    DB_PORT: 5432
+  ports:
+    - "8000:8000"
+  depends_on:
+    - postgres
 
-  postgres:
+
+    postgres:
     image: postgres:latest
     container_name: postgres
     restart: always
@@ -34,6 +30,12 @@ services:
       POSTGRES_DB: your_db
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U your_user"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 
   redis:
     image: redis:latest
