Обновил docker-compose.yml с исправленным кодом

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,40 +2,39 @@ version: '3.8'
 
 services:
   backend:
-  build:
-    context: ./backend_rds
-  container_name: backend
-  restart: always
-  environment:
-    DB_NAME: test_db
-    DB_USER: test_user
-    DB_PASSWORD: test_password
-    DB_HOST: postgres
-    DB_PORT: 5432
-  ports:
-    - "8000:8000"
-  depends_on:
-    - postgres
+    build:
+      context: ./backend_rds
+    container_name: backend
+    restart: always
+    environment:
+      DB_NAME: test_db
+      DB_USER: test_user
+      DB_PASSWORD: test_password
+      DB_HOST: postgres
+      DB_PORT: 5432
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgres
+      - redis
 
-
-    postgres:
+  postgres:
     image: postgres:latest
     container_name: postgres
     restart: always
     volumes:
       - pgdata:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: your_user
-      POSTGRES_PASSWORD: your_password
-      POSTGRES_DB: your_db
+      POSTGRES_USER: test_user
+      POSTGRES_PASSWORD: test_password
+      POSTGRES_DB: test_db
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U your_user"]
+      test: ["CMD-SHELL", "pg_isready -U test_user"]
       interval: 10s
       timeout: 5s
       retries: 5
-
 
   redis:
     image: redis:latest
@@ -46,3 +45,4 @@ services:
 
 volumes:
   pgdata:
+
