--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,16 @@ services:
     container_name: backend
     restart: always
     environment:
-      DB_NAME: test_db
-      DB_USER: test_user
-      DB_PASSWORD: test_password
+      DB_NAME: base
+      DB_USER: morty
+      DB_PASSWORD: 123456
       DB_HOST: postgres
       DB_PORT: 5432
+      CORS_ALLOWED_ORIGINS: http://52.59.239.82  # Указан публичный IP-адрес
     ports:
       - "8000:8000"
     depends_on:
       - postgres
-      - redis
 
   postgres:
     image: postgres:latest
@@ -25,13 +25,13 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: test_user
-      POSTGRES_PASSWORD: test_password
-      POSTGRES_DB: test_db
+      POSTGRES_USER: morty
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: base
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U test_user"]
+      test: ["CMD-SHELL", "pg_isready -U morty"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -45,4 +45,8 @@ services:
 
 volumes:
   pgdata:
+
+
+
+
 
