--- a/frontend/config.json
+++ b/frontend/config.json
@@ -1,5 +1,4 @@
 {
-    "BACKEND_RDS_URL": "http://<public-rds-endpoint>:<port>/test_connection/",
-    "BACKEND_REDIS_URL": "http://<public-redis-endpoint>:<port>/test_connection/"
-  }
-  
+    "BACKEND_RDS_URL": "https://mortybooksdomain.click/test_connection/",
+    "BACKEND_REDIS_URL": "https://mortybooksdomain.click:8001/test_connection/"
+}
