--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -32,7 +32,15 @@ jobs:
         # Сначала исключаем config.json из удаления
         aws s3 sync ./frontend/templates s3://book-sales-platform-frontend --delete --exclude "config.json"
         # После этого отдельно синхронизируем config.json, чтобы он точно оставался актуальным
-        aws s3 cp ./frontend/config.json s3://book-sales-platform-frontend/config.json
+        aws s3 cp ./frontend/config.json s3://book-sales-platform-frontend/config.json --acl public-read
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+    # Шаг 4: Очистка кеша CloudFront
+    - name: Invalidate CloudFront Cache
+      run: |
+        aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
