--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.8'
 
 services:
-  backend:                       
-    build:
-      context: ./backend_rds
+  backend:
+    image: 183631324733.dkr.ecr.eu-central-1.amazonaws.com/rds-backend:latest
     container_name: backend
     restart: always
     environment:
@@ -22,9 +21,8 @@ services:
       - postgres
       - redis
 
-  backend_redis:                 
-    build:
-      context: ./backend_redis
+  backend_redis:
+    image: 183631324733.dkr.ecr.eu-central-1.amazonaws.com/redis-backend:latest
     container_name: backend_redis
     restart: always
     environment:
@@ -33,11 +31,11 @@ services:
       ALLOWED_HOSTS: "localhost,127.0.0.1,0.0.0.0,mortybooksdomain.click"
       CORS_ALLOWED_ORIGINS: "https://mortybooksdomain.click,https://d3fhgk6ddd4x41.cloudfront.net"
     ports:
-      - "8001:8000"              
+      - "8001:8000"
     depends_on:
       - redis
 
-  postgres:                      
+  postgres:
     image: postgres:latest
     container_name: postgres
     restart: always
@@ -55,7 +53,7 @@ services:
       timeout: 5s
       retries: 5
 
-  redis:                        
+  redis:
     image: redis:latest
     container_name: redis
     ports:
@@ -69,5 +67,3 @@ services:
 
 volumes:
   pgdata:
-
-
