--- a/.github/workflows/deploy-backend-rds.yml
+++ b/.github/workflows/deploy-backend-rds.yml
@@ -1,4 +1,4 @@
-name: Deploy Backend to EC2
+name: Deploy RDS Backend to EC2
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Шаг 2: Создаем файл с SSH-ключом
+      # Шаг 2: Создаём файл с SSH-ключом
       - name: Create SSH key file
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > EC2Tutorial.pem
@@ -30,12 +30,22 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      # Шаг 4: Логин в ECR
-      - name: Authenticate to ECR
+      # Шаг 4: Аутентификация в ECR
+      - name: Authenticate to Amazon ECR
         run: |
           aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 183631324733.dkr.ecr.eu-central-1.amazonaws.com
 
-      # Шаг 5: Деплой на EC2
+      # Шаг 5: Сборка и отправка образа в ECR
+      - name: Build and Push Docker Image to ECR
+        env:
+          AWS_REGION: eu-central-1
+          ECR_REPOSITORY: rds-backend
+        run: |
+          docker build -t $ECR_REPOSITORY:latest ./backend_rds
+          docker tag $ECR_REPOSITORY:latest 183631324733.dkr.ecr.${AWS_REGION}.amazonaws.com/$ECR_REPOSITORY:latest
+          docker push 183631324733.dkr.ecr.${AWS_REGION}.amazonaws.com/$ECR_REPOSITORY:latest
+
+      # Шаг 6: Деплой на EC2
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i EC2Tutorial.pem ec2-user@18.193.161.41 << 'EOF'
